--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
 
 .home, .qualities {
     background-image: url('./assets/bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .nav {
@@ -33,6 +35,12 @@ footer {
     font-size: 30px;
     font-weight: bold;
     line-height: 40px;
+}
+
+.bg-nav {
+  background-image: url(./assets/nav_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .case1 {
@@ -107,6 +115,10 @@ footer {
 }
 .veritical {
   writing-mode: vertical-lr;
+}
+
+.top {
+  z-index: 100;
 }
 
 @media screen and (max-height: 1200px) {
