--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans&family=Montserrat&family=Noto+Sans&family=Orelega+One&family=Pacifico&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,10 +13,16 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.home, .qualities {
+.home {
     background-image: url('./assets/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.qualities {
+  background-image: url('./assets/bg_2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .nav {
@@ -29,6 +36,8 @@ body {
 
 footer {
     background-image: url('./assets/bg_contact.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .menu-text {
@@ -119,6 +128,7 @@ footer {
 
 .top {
   z-index: 100;
+  height: 100px;
 }
 
 @media screen and (max-height: 1200px) {
@@ -147,3 +157,7 @@ footer {
       font-size: 18px; /* Adjust as needed */
     }
   }
+
+
+
+  
