--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,19 @@ footer {
 
 .top {
   z-index: 100;
-  height: 100px;
+  /* height: 100px; */
+}
+
+.popup {
+  z-index: 200;
+}
+
+.popup_close {
+  z-index: 250;
+}
+
+.overlay {
+  background-color: rgb(0, 0, 0, 0.5);
 }
 
 @media screen and (max-height: 1200px) {
@@ -156,6 +168,14 @@ footer {
     .menu-text {
       font-size: 18px; /* Adjust as needed */
     }
+  }
+
+  .case1-gradient {
+    background-image: url(./assets/gradient1.png);
+  }
+
+  .case2-gradient {
+    background-image: url(./assets/gradient2.png);
   }
 
 
