--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans&family=Montserrat&family=Noto+Sans&family=Orelega+One&family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .font-montserrat {
@@ -14,20 +15,19 @@ body {
 }
 
 .home {
-    background-image: url('./assets/bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('./assets/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
 .qualities {
-  background-image: url('./assets/bg_2.png');
+  background-image: url('./assets/bg2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .nav {
-    background-image: url('./assets/nav_bg.png');
-    z-index: 95 !important;
+  background-image: url('./assets/nav_bg.png');
+  z-index: 95 !important;
 }
 
 .menu-open {
@@ -35,15 +35,13 @@ body {
 }
 
 footer {
-    background-image: url('./assets/bg_contact.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('./assets/bg_contact.png');
 }
 
 .menu-text {
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 40px;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 40px;
 }
 
 .bg-nav {
@@ -128,56 +126,323 @@ footer {
 
 .top {
   z-index: 100;
-  /* height: 100px; */
-}
-
-.popup {
-  z-index: 200;
-}
-
-.popup_close {
-  z-index: 250;
-}
-
-.overlay {
-  background-color: rgb(0, 0, 0, 0.5);
 }
 
 @media screen and (max-height: 1200px) {
-    .menu-text {
-      font-size: 27px; /* Adjust as needed */
-    }
+  .menu-text {
+    font-size: 27px; /* Adjust as needed */
   }
-  
-  /* Medium size screen */
-  @media screen and (max-height: 992px) {
-    .menu-text {
-      font-size: 24px; /* Adjust as needed */
-    }
-  }
-  
-  /* Small size screen */
-  @media screen and (max-height: 768px) {
-    .menu-text {
-      font-size: 21px; /* Adjust as needed */
-    }
-  }
-  
-  /* Extra Small size screen */
-  @media screen and (max-height: 576px) {
-    .menu-text {
-      font-size: 18px; /* Adjust as needed */
-    }
-  }
+}
 
-  .case1-gradient {
-    background-image: url(./assets/gradient1.png);
+/* Medium size screen */
+@media screen and (max-height: 992px) {
+  .menu-text {
+    font-size: 24px; /* Adjust as needed */
   }
+}
 
-  .case2-gradient {
-    background-image: url(./assets/gradient2.png);
+/* Small size screen */
+@media screen and (max-height: 768px) {
+  .menu-text {
+    font-size: 21px; /* Adjust as needed */
   }
+}
 
+/* Extra Small size screen */
+@media screen and (max-height: 576px) {
+  .menu-text {
+    font-size: 18px; /* Adjust as needed */
+  }
+}
 
+/*Luis*/
+#home
+  > div
+  > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start {
+  margin-top: 100px;
+}
 
-  
+#home
+  > div
+  > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start
+  > button {
+  font-weight: 600;
+}
+
+#about > div > div.flex.flex-col.justify-start.gap-0.h-fit.w-full > div > p {
+  font-weight: 500;
+}
+
+.top {
+  height: 100px;
+}
+
+#team
+  > div
+  > div.h-52.flex.gap-2.justify-start.w-full.pl-10
+  > div
+  > div
+  > p.text-\[\#A49090\],
+#team
+  > div
+  > div.h-52.flex.gap-2.justify-end.w-\[90\%\]
+  > div
+  > div
+  > p.text-\[\#A49090\],
+#team
+  > div
+  > div.h-52.flex.gap-2.justify-start.w-full.pl-10
+  > div
+  > div
+  > p.text-\[\#FF6F1F\],
+#team
+  > div
+  > div.h-52.flex.gap-2.justify-end.w-\[90\%\]
+  > div
+  > div
+  > p.text-\[\#FF6F1F\] {
+  font-weight: 500;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-5 {
+  padding-top: 65px;
+  padding-bottom: 50px;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-5
+  > ul,
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-2
+  > ul
+  > li.flex.gap-2.items-center.text-\[\#ffffff\].\'text-\[30px\]\'.font-bold {
+  font-size: 30px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-5
+  > ul
+  > li.p-3,
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-2
+  > ul
+  > li.p-3
+  > img {
+  margin-right: 5px;
+}
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-5
+  > ul
+  > li.p-3
+  > img {
+  margin-right: 15px;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-5
+  > ul
+  > li.flex.gap-2.items-center.text-\[\#ffffff\].\'text-\[30px\]\'.font-bold {
+  margin-right: -23px;
+}
+
+#home > div > div.h-full.w-\[55\%\].relative.p-0.m-0 > img {
+  width: 700px;
+  height: 775px;
+  right: 120px;
+  top: 113px;
+}
+
+#home
+  > div
+  > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start {
+  margin-right: 170px;
+}
+
+#home
+  > div
+  > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start
+  > button {
+  margin-top: 70px;
+}
+
+.top {
+  height: 117px;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-2
+  > ul {
+  gap: 3rem;
+}
+
+#root
+  > div
+  > div
+  > div.top.bg-nav.h-fit.w-full.fixed.top-0.left-0.z-60.px-\[7\.5\%\].flex.justify-between.items-center.align-middle.py-2
+  > ul {
+  margin-right: 25px;
+}
+#about > div > div.flex.flex-col.justify-start.gap-0.h-fit.w-full > span {
+  font-weight: 500;
+}
+
+#about > div > div.flex.flex-col.justify-start.gap-0.h-fit.w-full > span {
+  margin-bottom: 40px;
+}
+
+#service
+  > div
+  > div
+  > div
+  > div.sticky.r-0.w-auto.flex.flex-col.items-end.px-20.pt-10.gap-1 {
+  margin-top: 90px;
+  margin-right: 80px;
+}
+
+#service
+  > div
+  > div
+  > div
+  > div.sticky.r-0.w-auto.flex.flex-col.items-end.px-20.pt-10.gap-1
+  > p.z-50.text-\[\#F7073E\].font-normal.text-\[45px\].min-\[1920px\]\:text-\[70px\].leading-\[75px\].min-\[1920px\]\:leading-\[95px\].whitespace-nowrap {
+  font-weight: 500;
+}
+
+#service > div > div > div > div.h-\[55vh\].w-full.overflow-hidden.relative {
+  top: -130px;
+}
+
+#service
+  > div
+  > div
+  > img.h-\[80\%\].z-\[4\].absolute.bottom-0.origin-\[48\%_48\%\].left-\[23\%\].min-\[800px\]\:max-\[1280px\]\:left-\[15\%\].mb-0 {
+  left: 17.5%;
+}
+
+#service > div > div > div > div.h-\[55vh\].w-full.overflow-hidden.relative {
+  right: 12.5%;
+}
+
+#service > div > div > div {
+  width: 33%;
+}
+
+#service
+  > div
+  > div
+  > img.h-\[80\%\].z-\[4\].absolute.bottom-0.origin-\[48\%_48\%\].left-\[23\%\].min-\[800px\]\:max-\[1280px\]\:left-\[15\%\].mb-0 {
+  bottom: 20px;
+}
+
+#service
+  > div
+  > div
+  > div
+  > div.h-\[55vh\].w-full.overflow-hidden.relative
+  > div.w-full.flex.flex-col.px-20.min-\[1920px\]\:px-10.gap-2.whitespace-pre-wrap.absolute.max-\[1390px\]\:bottom-\[-15\%\].min-\[1400px\]\:bottom-\[-40\%\].\32
+  xl\:bottom-\[-30\%\].opacity-40.\32
+  xl\:text-xl {
+  bottom: 0;
+}
+
+#quality > div > div.py-1 {
+  margin-top: 62.5px;
+}
+
+#quality > div > div.py-1 > span {
+  font-weight: 500;
+}
+
+#quality > div > div.flex.justify-between.gap-2.h-full.py-2 {
+  padding-top: 10px;
+}
+
+#quality > div > div.flex.justify-between.gap-2.h-full.py-2 {
+  height: 810px;
+}
+
+#quality img {
+  max-width: 152px;
+}
+
+#quality > div > div.flex.justify-between.gap-2.h-full.py-2 {
+  gap: 1rem;
+}
+
+#team > div {
+  padding-top: 9.66rem;
+}
+#team > div > div.h-52.flex.gap-2.justify-start.w-full.pl-10 > div > img,
+#team > div > div.h-52.flex.gap-2.justify-end.w-\[90\%\] > div > img {
+  height: 25rem;
+}
+
+#team > div > div.h-52.flex.gap-2.justify-start.w-full.pl-10 > div {
+  width: 60%;
+}
+
+#team > div > div.h-52.flex.gap-2.justify-end.w-\[90\%\] {
+  height: 23rem;
+}
+
+#team > div {
+  padding-left: 5.25rem;
+}
+
+#team > div > div.h-52.flex.gap-2.justify-start.w-full.pl-10 {
+  height: 23rem;
+}
+
+#team > div > div.h-52.flex.gap-2.justify-end.w-\[90\%\] > div {
+  width: 66.6%;
+}
+
+#team > div > div.h-52.flex.gap-2.justify-end.w-\[90\%\] {
+  margin-left: 17.5rem;
+}
+
+#contact > footer {
+  height: 340px;
+}
+
+#contact > footer {
+  justify-content: normal;
+}
+
+#contact > footer > div.flex.w-auto.flex-col.py-1.gap-2.items-start {
+  margin-left: 3rem;
+}
+
+#contact
+  > footer
+  > div.flex.w-auto.gap-10.justify-end.px-8.text-\[12px\].min-\[1920px\]\:text-\[20px\].leading-\[24px\].min-\[1920px\]\:leading-\[40px\].pb-5
+  > div:nth-child(1) {
+  width: 100%;
+}
+
+#contact
+  > footer
+  > div.flex.w-auto.gap-10.justify-end.px-8.text-\[12px\].min-\[1920px\]\:text-\[20px\].leading-\[24px\].min-\[1920px\]\:leading-\[40px\].pb-5 {
+  margin-left: 38.3rem;
+  font-weight: 500;
+  margin-top: 0.75rem;
+}
