--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans&family=Montserrat&family=Noto+Sans&family=Orelega+One&family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .font-montserrat {
@@ -15,9 +14,9 @@ body {
 }
 
 .home {
-  background-image: url('./assets/bg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-image: url('./assets/bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .qualities {
@@ -27,8 +26,8 @@ body {
 }
 
 .nav {
-  background-image: url('./assets/nav_bg.png');
-  z-index: 95 !important;
+    background-image: url('./assets/nav_bg.png');
+    z-index: 95 !important;
 }
 
 .menu-open {
@@ -36,13 +35,15 @@ body {
 }
 
 footer {
-  background-image: url('./assets/bg_contact.png');
+    background-image: url('./assets/bg_contact.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .menu-text {
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 40px;
 }
 
 .bg-nav {
@@ -127,56 +128,87 @@ footer {
 
 .top {
   z-index: 100;
+  /* height: 100px; */
+}
+
+.popup {
+  z-index: 200;
+}
+
+.popup_close {
+  z-index: 250;
+}
+
+.overlay {
+  background-color: rgb(0, 0, 0, 0.5);
 }
 
 @media screen and (max-height: 1200px) {
-  .menu-text {
-    font-size: 27px; /* Adjust as needed */
+    .menu-text {
+      font-size: 27px; /* Adjust as needed */
+    }
   }
-}
+  
+  /* Medium size screen */
+  @media screen and (max-height: 992px) {
+    .menu-text {
+      font-size: 24px; /* Adjust as needed */
+    }
+  }
+  
+  /* Small size screen */
+  @media screen and (max-height: 768px) {
+    .menu-text {
+      font-size: 21px; /* Adjust as needed */
+    }
+  }
+  
+  /* Extra Small size screen */
+  @media screen and (max-height: 576px) {
+    .menu-text {
+      font-size: 18px; /* Adjust as needed */
+    }
+  }
 
-/* Medium size screen */
-@media screen and (max-height: 992px) {
-  .menu-text {
-    font-size: 24px; /* Adjust as needed */
+  .case1-gradient {
+    background-image: url(./assets/gradient1.png);
   }
-}
 
-/* Small size screen */
-@media screen and (max-height: 768px) {
-  .menu-text {
-    font-size: 21px; /* Adjust as needed */
+  .case2-gradient {
+    background-image: url(./assets/gradient2.png);
   }
-}
+  .case3-gradient {
+    background-image: url(./assets/gradient3.png);
+  }
 
-/* Extra Small size screen */
-@media screen and (max-height: 576px) {
-  .menu-text {
-    font-size: 18px; /* Adjust as needed */
-  }
-}
+
+
+
+  
+
+
 
 /*Luis*/
-#home
+/* #home
   > div
   > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start {
   margin-top: 100px;
-}
+} */
 
-#home
+/* #home
   > div
   > div.p-0.m-0.h-full.w-\[45\%\].flex.flex-col.justify-start.items-start
   > button {
   font-weight: 600;
-}
+} */
 
 #about > div > div.flex.flex-col.justify-start.gap-0.h-fit.w-full > div > p {
   font-weight: 500;
 }
 
-.top {
+/* .top {
   height: 100px;
-}
+} */
 
 #team
   > div
@@ -455,5 +487,18 @@ footer {
 
 .case2-gradient {
   background-image: url(./assets/gradient2.png);
+}
+
+
+.popup {
+  z-index: 200;
+}
+
+.popup_close {
+  z-index: 250;
+}
+
+.overlay {
+  background-color: rgb(0, 0, 0, 0.5);
 }
 
