--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .font-montserrat {
@@ -14,9 +14,9 @@ body {
 }
 
 .home {
-    background-image: url('./assets/bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('./assets/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .qualities {
@@ -26,8 +26,8 @@ body {
 }
 
 .nav {
-    background-image: url('./assets/nav_bg.png');
-    z-index: 95 !important;
+  background-image: url('./assets/nav_bg.png');
+  z-index: 95 !important;
 }
 
 .menu-open {
@@ -35,15 +35,15 @@ body {
 }
 
 footer {
-    background-image: url('./assets/bg_contact.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('./assets/bg_contact.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .menu-text {
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 40px;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 40px;
 }
 
 .bg-nav {
@@ -144,49 +144,42 @@ footer {
 }
 
 @media screen and (max-height: 1200px) {
-    .menu-text {
-      font-size: 27px; /* Adjust as needed */
-    }
+  .menu-text {
+    font-size: 27px; /* Adjust as needed */
   }
-  
-  /* Medium size screen */
-  @media screen and (max-height: 992px) {
-    .menu-text {
-      font-size: 24px; /* Adjust as needed */
-    }
+}
+
+/* Medium size screen */
+@media screen and (max-height: 992px) {
+  .menu-text {
+    font-size: 24px; /* Adjust as needed */
   }
-  
-  /* Small size screen */
-  @media screen and (max-height: 768px) {
-    .menu-text {
-      font-size: 21px; /* Adjust as needed */
-    }
+}
+
+/* Small size screen */
+@media screen and (max-height: 768px) {
+  .menu-text {
+    font-size: 21px; /* Adjust as needed */
   }
-  
-  /* Extra Small size screen */
-  @media screen and (max-height: 576px) {
-    .menu-text {
-      font-size: 18px; /* Adjust as needed */
-    }
+}
+
+/* Extra Small size screen */
+@media screen and (max-height: 576px) {
+  .menu-text {
+    font-size: 18px; /* Adjust as needed */
   }
+}
 
-  .case1-gradient {
-    background-image: url(./assets/gradient1.png);
-  }
+.case1-gradient {
+  background-image: url(./assets/gradient1.png);
+}
 
-  .case2-gradient {
-    background-image: url(./assets/gradient2.png);
-  }
-  .case3-gradient {
-    background-image: url(./assets/gradient3.png);
-  }
-
-
-
-
-  
-
-
+.case2-gradient {
+  background-image: url(./assets/gradient2.png);
+}
+.case3-gradient {
+  background-image: url(./assets/gradient3.png);
+}
 
 /*Luis*/
 /* #home
@@ -480,7 +473,6 @@ footer {
   margin-top: 0.75rem;
 }
 
-
 .case1-gradient {
   background-image: url(./assets/gradient1.png);
 }
@@ -488,7 +480,6 @@ footer {
 .case2-gradient {
   background-image: url(./assets/gradient2.png);
 }
-
 
 .popup {
   z-index: 200;
@@ -502,3 +493,12 @@ footer {
   background-color: rgb(0, 0, 0, 0.5);
 }
 
+#about > div > div.w-full.relative.p-0.m-0.pt-10.flex.justify-end > img {
+  height: auto;
+  max-width: 800px !important;
+  width: 770px;
+}
+
+#about {
+  padding-top: 0;
+}
