--- a/src/index.css
+++ b/src/index.css
@@ -555,11 +555,17 @@ footer {
 }
 
 #about > div > div.flex.flex-col.justify-start.gap-0.h-fit.w-full > span {
-  margin-top: 3.75rem;
+  margin-top: 3rem;
   margin-bottom: 3.25rem;
 }
 
 #about > div {
-  padding-left: 0.2rem;
-  padding-right: 5rem;
+  padding-left: 0rem;
+  padding-right: 8rem;
+}
+
+#about > div > div.w-full.h-auto.relative.p-0.m-0.pt-0.flex.justify-end > img {
+  bottom: 2.25rem;
+  right: 2.25rem;
+  z-index: 999;
 }
