fixes in progress

--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,11 @@ footer {
   background-image: url(./assets/gradient3.png);
 }
 
+.case4-gradient {
+  background-image: url(./assets/gradient4.png);
+}
+
+
 /*Luis*/
 /* #home
   > div
